@@ -1,3 +1,6 @@
+Mar 10, 2022
+  added log 'aliases'
+
 Dec 16, 2021
   improved logging
 
